Fix navbar width on mobile devices

--- a/src/styles/_navigation.scss
+++ b/src/styles/_navigation.scss
@@ -5,11 +5,15 @@
   top: 0;
 
   background-color: white;
-  margin: 0 -100%;
+  // margin: 0 -100%;
 
   border-bottom: 2px solid #62d9fb;
 
   .nav-bar {
+    width: 80%;
+    @media screen and (max-width: 768px) {
+      width: 100%;
+    }
 
     display: flex;
     flex-direction: row;
