--- a/src/styles/_page.scss
+++ b/src/styles/_page.scss
@@ -11,6 +11,9 @@
     width: 80%;
     margin: 0 auto;
 
+    @media screen and (max-width: 768px) {
+        width: 100%;
+    }
 }
 
 .content {
